--- a/src/druid.properties
+++ b/src/druid.properties
@@ -1,7 +1,7 @@
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/test
+url=jdbc:mysql://localhost:3306/test
 username=root
-password=root
+password=liyongqi2000
 
 initialSize=5
 maxActive=10
